tests/07-invalid_default.stderr
error: `default` attribute without `#[derive(Default)]`
 --> tests/07-invalid_default:7:5
  |
7 |     #[default]
  |     ^^^^^^^^^^
